# MPlay-SHD

./: .gitignore  README.md  settings.gradle.kts
.github/workflows/: Build.yml
app/: build.gradle.kts
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt
app/src/main/java/com/tuneai/audio/: MainActivity.kt  VisualizerConfig.kt
app/src/main/java/com/tuneai/audio/nativebridge/: NativeAudioEngine.kt
